tests/build_failures/describe_fail.stderr
error: That name is not allowed
 --> $DIR/describe_fail.rs:4:8
  |
4 | struct OhNo;
  |        ^^^^
