tests/build_failures/describe_fail.rs
use abc_macros::DescribeStruct;

#[derive(DescribeStruct)]
struct OhNo;

fn main() {}
